--- a/ar-campus/index.html
+++ b/ar-campus/index.html
@@ -20,6 +20,7 @@
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
     <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 8.5272683; longitude: 76.8896448" scale="10 10 10"></a-entity>
+    <a-entity material='color: green' geometry='primitive: box' gps-new-entity-place="latitude: 8.5277927; longitude: 76.8898071" scale="10 10 10"></a-entity>
 </a-scene>
 </body>
 </html>
