--- a/ar-campus/index.html
+++ b/ar-campus/index.html
@@ -19,8 +19,16 @@
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 8.5272683; longitude: 76.8896448" scale="10 10 10"></a-entity>
-    <a-entity material='color: green' geometry='primitive: box' gps-new-entity-place="latitude: 8.5277927; longitude: 76.8898071" scale="10 10 10"></a-entity>
+    <a-entity gps-new-entity-place="latitude: 8.5272683; longitude: 76.8896448">
+      <a-box material="color: red" scale="10 10 10"></a-box>
+      <a-text value="Red Box" color="#fff" position="0 6 0" align="center" look-at="[gps-camera]"></a-text>
+    </a-entity>
+    
+    <!-- Green Box with Text -->
+    <a-entity gps-new-entity-place="latitude: 8.5277927; longitude: 76.8898071">
+      <a-box material="color: green" scale="10 10 10"></a-box>
+      <a-text value="Green Box" color="#fff" position="0 6 0" align="center" look-at="[gps-camera]"></a-text>
+    </a-entity>
 </a-scene>
 </body>
 </html>
