--- a/ar-campus/index.html
+++ b/ar-campus/index.html
@@ -10,43 +10,59 @@
 </html> -->
 <!DOCTYPE html>
 <html>
-<head>
-<title>AR.js A-Frame Location-based</title>
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
-</head>
-<body>
-<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
-    <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <!-- Red Box with Large Text -->
-<a-entity gps-new-entity-place="latitude: 8.5272683; longitude: 76.8896448">
-  <a-box material="color: red" scale="10 10 10"></a-box>
-  <a-text 
-    value="Red Box" 
-    color="#fff" 
-    position="0 8 0" 
-    align="center" 
-    look-at="[gps-camera]"
-    scale="10 10 10"
-    width="10">
-  </a-text>
-</a-entity>
+  <head>
+    <title>AR.js A-Frame Location-based</title>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js"
+    ></script>
+  </head>
+  <body>
+    <a-scene
+      vr-mode-ui="enabled: false"
+      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false"
+      renderer="antialias: true; alpha: true"
+    >
+      <a-camera gps-new-camera="gpsMinDistance: 5"></a-camera>
+      <!-- Red Box with Large Text -->
+      <a-entity
+        gps-new-entity-place="latitude: 8.5272683; longitude: 76.8896448"
+      >
+        <a-box material="color: red" scale="10 10 10"></a-box>
+        <a-text
+          value="Bed Pod"
+          color="#ffffff"
+          position="0 7 0"
+          align="center"
+          look-at="[gps-camera]"
+          scale="5 5 5"
+          side="double"
+          baseline="bottom"
+        >
+        </a-text>
+      </a-entity>
 
-<!-- Green Box with Large Text -->
-<a-entity gps-new-entity-place="latitude: 8.5277927; longitude: 76.8898071">
-  <a-box material="color: green" scale="10 10 10"></a-box>
-  <a-text 
-    value="Green Box" 
-    color="#fff" 
-    position="0 8 0" 
-    align="center" 
-    look-at="[gps-camera]"
-    scale="10 10 10"
-    width="10">
-  </a-text>
-</a-entity>
-
-</a-scene>
-</body>
+      <!-- Green Box with Large Text -->
+      <a-entity
+        gps-new-entity-place="latitude: 8.5277927; longitude: 76.8898071"
+      >
+        <a-box material="color: green" scale="10 10 10"></a-box>
+        <a-text
+          value="Children Park"
+          color="#fff"
+          position="0 8 0"
+          align="center"
+          look-at="[gps-camera]"
+          scale="10 10 10"
+          width="10"
+        >
+        </a-text>
+      </a-entity>
+    </a-scene>
+  </body>
 </html>
