--- a/ar-campus/index.html
+++ b/ar-campus/index.html
@@ -29,9 +29,8 @@
       renderer="antialias: true; alpha: true"
     >
       <a-camera gps-new-camera="gpsMinDistance: 1"></a-camera>
-      <!-- Red Box with Large Text -->
       <a-entity
-        gps-new-entity-place="latitude: 11.136213; longitude: 75.888521"
+        gps-new-entity-place="latitude: 8.5551203; longitude: 76.8836281"
       >
         <a-box material="color: red" scale="10 10 10"></a-box>
         <a-text
@@ -46,6 +45,23 @@
         >
         </a-text>
       </a-entity>
+      <!-- Red Box with Large Text -->
+      <!-- <a-entity
+        gps-new-entity-place="latitude: 11.136213; longitude: 75.888521"
+      >
+        <a-box material="color: red" scale="10 10 10"></a-box>
+        <a-text
+          value="CCSIT"
+          color="#ffffff"
+          position="0 7 0"
+          align="center"
+          look-at="[gps-camera]"
+          scale="5 5 5"
+          side="double"
+          baseline="bottom"
+        >
+        </a-text>
+      </a-entity> -->
 
       <!-- const LOCATIONS = [
   { name: "Tagore Nikethan", lat: 11.1340598, lng: 75.8951733 },
@@ -55,7 +71,7 @@
   { name: "Pareeksha Bhavan", lat: 11.1354189, lng: 75.8916137 },
 ]; -->
       <!-- Green Box with Large Text -->
-      <a-entity
+      <!-- <a-entity
         gps-new-entity-place="latitude: 11.1340598; longitude: 75.8951733"
       >
         <a-box material="color: green" scale="10 10 10"></a-box>
@@ -68,9 +84,9 @@
           scale="5 5 5"
         >
         </a-text>
-      </a-entity>
+      </a-entity> -->
       <!-- EMS Seminar Hall -->
-      <a-entity
+      <!-- <a-entity
         gps-new-entity-place="latitude: 11.1338299; longitude: 75.8930597"
       >
         <a-box material="color: blue" scale="10 10 10"></a-box>
@@ -83,9 +99,9 @@
           scale="5 5 5"
         >
         </a-text>
-      </a-entity>
+      </a-entity> -->
       <!-- Botanical Garden -->
-      <a-entity
+      <!-- <a-entity
       gps-new-entity-place="latitude: 11.1339034; longitude: 75.8905995"
     >
       <a-box material="color: yellow" scale="10 10 10"></a-box>
@@ -98,10 +114,10 @@
         scale="5 5 5"
       >
       </a-text>
-    </a-entity>
+    </a-entity> -->
 
       <!-- STUDENT TRAP -->
-      <a-entity
+      <!-- <a-entity
         gps-new-entity-place="latitude: 11.1358791; longitude: 75.8894318"
       >
         <a-box material="color: red" scale="10 10 10"></a-box>
@@ -114,10 +130,10 @@
           scale="5 5 5"
         >
         </a-text>
-      </a-entity>
+      </a-entity> -->
 
       <!-- Pareeksha Bhavan -->
-      <a-entity
+      <!-- <a-entity
         gps-new-entity-place="latitude: 11.1354189; longitude: 75.8916137"
       >
         <a-box material="color: green" scale="10 10 10"></a-box>
@@ -130,7 +146,7 @@
           scale="5 5 5"
         >
         </a-text>
-      </a-entity>
+      </a-entity> -->
     </a-scene>
   </body>
 </html>
